Improved the upcoming events bar, fixed overflow, changed scrollbar

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -41,8 +41,34 @@ body {
     height: 250px;
 }
 
+.test{
+    width: 260px;
+}
+
 /* Misc */
 
 .day-button{
     cursor: pointer;
+}
+
+/* Scrollbar */
+
+/* Width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
